--- a/final_proj/src/main/webapp/WEB-INF/web.xml
+++ b/final_proj/src/main/webapp/WEB-INF/web.xml
@@ -46,12 +46,12 @@
     		TestFilter -> testFilter	
      -->
 
-<!-- 	<filter> -->
-<!-- 		<filter-name>testFilter</filter-name> -->
-<!-- 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> -->
-<!-- 	</filter> -->
-<!-- 	<filter-mapping> -->
-<!-- 		<filter-name>testFilter</filter-name> -->
-<!-- 		<url-pattern>/*</url-pattern> -->
-<!-- 	</filter-mapping> -->
+	<filter>
+		<filter-name>utf8Filter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>utf8Filter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
