아이디 유효성검사 및 중복검사

--- a/final_proj/src/main/resources/db.properties
+++ b/final_proj/src/main/resources/db.properties
@@ -2,7 +2,8 @@
 #name=value
 
 database.driver=oracle.jdbc.OracleDriver
-database.url=jdbc:oracle:thin:@61.75.27.204:14001:xe
+#database.url=jdbc:oracle:thin:@61.75.27.204:14001:xe
+database.url=jdbc:oracle:thin:@192.168.0.19:1521:xe
 database.username=sw45
 database.password=sw45
 
