--- a/final_proj/pom.xml
+++ b/final_proj/pom.xml
@@ -211,5 +211,11 @@
 		    <version>1.3.2</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.googlecode.soundlibs</groupId>
+		    <artifactId>mp3spi</artifactId>
+		    <version>1.9.5.4</version>
+		</dependency>
+		
 	</dependencies>
 </project>
