--- a/final_proj/pom.xml
+++ b/final_proj/pom.xml
@@ -217,5 +217,12 @@
 		    <version>1.9.5.4</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20180130</version>
+		</dependency>
+		
 	</dependencies>
 </project>
